--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     //////////////////////////////////////////////////////
 -->
 
-<nav class="navbar navbar-expand-lg navbar-light menu">
+<nav class="navbar navbar-expand-lg navbar-light menu shadow fixed-top">
     <div class="container">
      <img src="/assets/images/logo.png" alt="image logo">
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -53,6 +53,73 @@
       </div>
     </div>
   </nav>
+
+
+<!-- 
+/////////////////////////////////////////////////////////
+            INTRO SECTION
+///////////////////////////////////////////////////////
+ -->
+
+<section id="home" class="intro-section">
+  <div class="container">
+    <div class="row align-items-center text-white">
+      <div class="col-md-6 intros">
+        <h1 class="display-2">
+          <span class="display-2-intros">
+            Hey!, I'm patrick
+          </span>
+        </h1>
+
+        <h1 class="display-2">
+          <span class="display-2-description lh-base">
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Maxime voluptas at perspiciatis quibusdam magni iusto exercitationem illum facere, expedita ipsam ex maiores mollitia itaque quia. Dolor repellendus commodi rem velit.
+          </span>
+        </h1>
+        <button type="button" class="rounded-pill btn-rounded"> Get In Touch
+          <span>
+            <i class="fas fa-phone-alt">
+
+            </i>
+          </span>  
+        </button>
+      </div>
+      <div class="col-md-6 intros text-end">
+        <div class="video-box">
+          <img src="/assets/images/arts/intro-section-illustration.png" alt="video illustration" class="img-fluid">
+        
+          <a href="">
+          <span> <i class="fas fa-play-circle" aria-hidden="true"></i>
+          </span> 
+          </a>
+
+        </div>
+
+      </div>
+    </div>
+  </div>
+
+<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
+  <path fill="#ffffff" fill-opacity="1" d="M0,64L48,96C96,128,192,192,288,192C384,192,480,128,576,128C672,128,768,192,864,202.7C960,213,1056,171,1152,154.7C1248,139,1344,149,1392,154.7L1440,160L1440,320L1392,320C1344,320,1248,320,1152,320C1056,320,960,320,864,320C768,320,672,320,576,320C480,320,384,320,288,320C192,320,96,320,48,320L0,320Z"></path>
+</svg>
+</section>
+
+
+<!--//////////////////////////////////////////////// 
+      START THE COMPANIES SECTION
+ ///////////////////////////////////////////////////-->
+
+<section id="campanies" class="campanies">
+  <div class="container">
+    <div class="row text-center">
+      <h4 class="fw-bold lead mb3">
+        Trusted by campanies like
+      </h4>
+      <div class="heading-line mb-5"></div>
+    </div>
+  </div>
+</section>
+
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </body>
